fix: align

--- a/nu-kenzie/src/components/Card/Card.css
+++ b/nu-kenzie/src/components/Card/Card.css
@@ -70,5 +70,6 @@ h3 {
 .subtitle__type {
   color: var(--text-color);
   font-weight: 400;
+  align-self: left;
   font-size: 14px;
 }
